Working input and calculation.

--- a/RpnCalculator.UI/MainWindow.xaml
+++ b/RpnCalculator.UI/MainWindow.xaml
@@ -9,7 +9,7 @@
                   ItemsSource="{Binding Stack}" Name="StackView">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Stack" />
+                    <GridViewColumn Header="Stack" DisplayMemberBinding="{Binding Path=Value}" />
                 </GridView>
             </ListView.View>
         </ListView>
