--- a/RpnCalculator.UI/MainWindow.xaml
+++ b/RpnCalculator.UI/MainWindow.xaml
@@ -23,16 +23,17 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button x:Name="Num0" Content="0" HorizontalAlignment="Left" Margin="10,185,0,0" VerticalAlignment="Top" Width="20" RenderTransformOrigin="2.7,0.5" />
-        <Button x:Name="Sign" Content="+-" HorizontalAlignment="Left" Margin="35,185,0,0" VerticalAlignment="Top" Width="20" RenderTransformOrigin="2.7,0.5" />
-        <Button x:Name="Decimal" Content="." HorizontalAlignment="Left" Margin="60,185,0,0" VerticalAlignment="Top" Width="20" RenderTransformOrigin="2.7,0.5" />
+        <Button x:Name="Num0" Content="0" HorizontalAlignment="Left" Margin="10,185,0,0" VerticalAlignment="Top" Width="20" RenderTransformOrigin="2.7,0.5" FontSize="18" Padding="1,-4,1,1" Height="20" />
+        <Button x:Name="Sign" Content="+-" HorizontalAlignment="Left" Margin="35,185,0,0" VerticalAlignment="Top" Width="20" RenderTransformOrigin="2.7,0.5" FontSize="18" Padding="1,-4,1,1" Height="20" />
+        <Button x:Name="Decimal" Content="." HorizontalAlignment="Left" Margin="60,185,0,0" VerticalAlignment="Top" Width="20" RenderTransformOrigin="2.7,0.5" FontSize="18" Padding="1,-4,1,1" Height="20" />
 
-        <Button x:Name="Back" Content="&lt;-" HorizontalAlignment="Left" Margin="110,110,0,0" VerticalAlignment="Top" Width="20" RenderTransformOrigin="2.7,0.5" />
-        <Button x:Name="Mul" Content="x" HorizontalAlignment="Left" Margin="85,135,0,0" VerticalAlignment="Top" Width="20" RenderTransformOrigin="2.7,0.5" />
-        <Button x:Name="Div" Content="/" HorizontalAlignment="Left" Margin="110,135,0,0" VerticalAlignment="Top" Width="20" RenderTransformOrigin="2.7,0.5" />
-        <Button x:Name="Add" Content="+" HorizontalAlignment="Left" Margin="85,160,0,0" VerticalAlignment="Top" Width="20" />
-        <Button x:Name="Sub" Content="–" HorizontalAlignment="Left" Margin="110,160,0,0" VerticalAlignment="Top" Width="20" RenderTransformOrigin="1.32,-1.25" />
-        <Button x:Name="Push" Content="Enter" HorizontalAlignment="Left" Margin="85,185,0,0" VerticalAlignment="Top" Width="45" RenderTransformOrigin="2.7,0.5" />
+        <Button x:Name="Swap" Content="⥯" HorizontalAlignment="Left" Margin="85,110,0,0" VerticalAlignment="Top" Width="20" RenderTransformOrigin="2.7,0.5" FontSize="18" Height="20" Padding="1,-4,1,1" />
+        <Button x:Name="Back" Content="←" HorizontalAlignment="Left" Margin="110,110,0,0" VerticalAlignment="Top" Width="20" RenderTransformOrigin="2.7,0.5" FontSize="18" Padding="1,-4,1,1" Height="20" />
+        <Button x:Name="Mul" Content="x" HorizontalAlignment="Left" Margin="85,135,0,0" VerticalAlignment="Top" Width="20" RenderTransformOrigin="2.7,0.5" FontSize="18" Padding="1,-4,1,1" Height="20" />
+        <Button x:Name="Div" Content="/" HorizontalAlignment="Left" Margin="110,135,0,0" VerticalAlignment="Top" Width="20" RenderTransformOrigin="2.7,0.5" FontSize="18" Padding="1,-4,1,1" Height="20" />
+        <Button x:Name="Add" Content="+" HorizontalAlignment="Left" Margin="85,160,0,0" VerticalAlignment="Top" Width="20" FontSize="18" Padding="1,-4,1,1" Height="20" />
+        <Button x:Name="Sub" Content="–" HorizontalAlignment="Left" Margin="110,160,0,0" VerticalAlignment="Top" Width="20" RenderTransformOrigin="1.32,-1.25" FontSize="18" Padding="1,-4,1,1" Height="20" />
+        <Button x:Name="Push" Content="Enter" HorizontalAlignment="Left" Margin="85,185,0,0" VerticalAlignment="Top" Width="45" RenderTransformOrigin="2.7,0.5" FontSize="18" Padding="1,-4,1,1" Height="20" />
         <WrapPanel x:Name="PositiveNumbersPanel" HorizontalAlignment="Left" Height="75" Margin="10,110,0,0" VerticalAlignment="Top" Width="75" Orientation="Horizontal">
             <WrapPanel.Resources>
                 <Style TargetType="{x:Type Button}">
